Added all the background music for each enemy stage and boss